--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.10",
     "astro-icon": "^1.1.2",
+    "dompurify": "^3.2.3",
     "firebase": "^11.1.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
